add example images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		body {
   		margin-top: 1.0em;
   		background-color: #114efe;
-		  font-family: "Helvetica,Arial,FreeSans";
+		  font-family: Helvetica,Arial,sans-serif;
   		color: #ffffff;
     }
     #container {
@@ -24,7 +24,7 @@
 		h2 { font-size: 1.5em; color: #eeb101; }
     h3 { text-align: center; color: #eeb101; }
     a { color: #eeb101; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
+    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; }
     .download { float: right; }
 		pre { background: #000; color: #fff; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
@@ -49,7 +49,16 @@
       <span class="small">by <a href="http://github.com/mrd">mrd</a></span></h1>
 
     <div class="description">
-      An OpenGL-based demo of a 3D fishtank written in Haskell
+      <img src="fishtank1.png" alt="fishtank1"/><img src="fishtank2.png" alt="fishtank2"/>
+      A demo written in Haskell using OpenGL that allows the user to
+      view a fish tank at various angles.  There are several kinds of
+      fish inside, showing various relationships based on the "Boids"
+      paper, including: flocking, predator/prey, mating, and feeding.
+      The user may use the mouse to alter the viewing angle, the
+      mousewheel to zoom, or may right-click to access a context menu
+      which offers options such as "Add Food" or "Kill a Boid".  There
+      is also an option for anaglyphic 3D output (using red-blue
+      glasses).
     </div>
 
     <h2>Dependencies</h2>
