--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ a:hover {
       </div>
 
     <h2>Dependencies</h2>
-<p>ghc, hopengl including OpenGL, OpenGLRaw, GLU, and GLUT, libjpeg.</p>
+<p>ghc, hopengl including OpenGL, OpenGLRaw, GLU, and GLUT, libjpeg, hcullide, and haskell-quaternion.</p>
 <h2>License</h2>
 <p>BSD3</p>
 <h2>Authors</h2>
